@@ -4,11 +4,13 @@ import static java.util.Objects.requireNonNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static seedu.anilist.logic.commands.CommandTestUtil.VALID_NAME_AKIRA;
+import static seedu.anilist.logic.commands.CommandTestUtil.VALID_NAME_BNHA;
 import static seedu.anilist.testutil.Assert.assertThrows;
 
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 import java.util.function.Predicate;
 
 import org.junit.jupiter.api.Test;
@@ -41,7 +43,7 @@ public class AddCommandTest {
         CommandResult commandResult = new AddCommand(validAnime).execute(modelStub);
 
         assertEquals(String.format(AddCommand.MESSAGE_SUCCESS, validAnime), commandResult.getFeedbackToUser());
-        assertEquals(Arrays.asList(validAnime), modelStub.animesAdded);
+        assertEquals(List.of(validAnime), modelStub.animesAdded);
     }
 
     @Test
@@ -55,26 +57,26 @@ public class AddCommandTest {
 
     @Test
     public void equals() {
-        Anime naruto = new AnimeBuilder().withName("Naruto").build();
-        Anime bleach = new AnimeBuilder().withName("Bleach").build();
-        AddCommand addNarutoCommand = new AddCommand(naruto);
-        AddCommand addBleachCommand = new AddCommand(bleach);
+        Anime akira = new AnimeBuilder().withName(VALID_NAME_AKIRA).build();
+        Anime bnha = new AnimeBuilder().withName(VALID_NAME_BNHA).build();
+        AddCommand addBnhaCommand = new AddCommand(bnha);
+        AddCommand addAkiraCommand = new AddCommand(akira);
 
         // same object -> returns true
-        assertTrue(addNarutoCommand.equals(addNarutoCommand));
+        assertTrue(addAkiraCommand.equals(addAkiraCommand));
 
         // same values -> returns true
-        AddCommand addAotCommandCopy = new AddCommand(naruto);
-        assertTrue(addNarutoCommand.equals(addAotCommandCopy));
+        AddCommand addAkiraCommandCopy = new AddCommand(akira);
+        assertTrue(addAkiraCommand.equals(addAkiraCommandCopy));
 
         // different types -> returns false
-        assertFalse(addNarutoCommand.equals(1));
+        assertFalse(addAkiraCommand.equals(1));
 
         // null -> returns false
-        assertFalse(addNarutoCommand.equals(null));
+        assertFalse(addAkiraCommand.equals(null));
 
         // different anime -> returns false
-        assertFalse(addNarutoCommand.equals(addBleachCommand));
+        assertFalse(addAkiraCommand.equals(addBnhaCommand));
     }
 
     /**
